tests/org.eclipse.php.core.tests/workspace/errors/php53/testTypeReferenceError2.pdtt
--TEST--
Test type reference error check
--FILE--
<?php
/**
 * @return NULL
 */
function foo()
{
    return NULL;
}
--EXPECT--
